@@ -1,5 +1,11 @@
 Changes with Apache 2.0.44
 
+  *) mod_ssl uses free() inappropriately in several places, to free
+     memory which has been previously allocated inside OpenSSL.
+     Such memory should be freed with OPENSSL_free(), not with free().
+     [Nadav Har'El <nyh@math.technion.ac.il>,
+      Madhusudan Mathihalli <madhusudan_mathihalli@hp.com>].
+
   *) Emit a message to the error log when we return 404 because
      the URI contained '%2f'.  (This was previously nastily silent
      and difficult to debug.)  [Ken Coar]
